--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=http://registry.npmjs.org/
-//registry.npmjs.org/:_authToken=
+//registry.npmjs.org/:_authToken=0421ceca-3132-4fe7-8230-25a51a70cfee
