--- a/packages/vue-output-target/package.json
+++ b/packages/vue-output-target/package.json
@@ -19,7 +19,7 @@
     "rollup": "rollup -c",
     "version": "npm run build",
     "release": "np",
-    "test": "jest"
+    "test": "jest __tests__/**.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
   },
   "gitHead": "fa59d84da2fc08ceccc5ce4fdb0048cab7b3972e",
   "devDependencies": {
+    "jest": "^26.6.3",
     "vue": "^3.0.5"
   }
 }
