--- a/packages/angular-output-target/package.json
+++ b/packages/angular-output-target/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14"
+    "@angular/forms": "8.2.14",
+    "jest": "^26.6.3"
   },
   "jest": {
     "transform": {
@@ -54,5 +55,5 @@
     ],
     "testURL": "http://localhost"
   },
-  "gitHead": "fa59d84da2fc08ceccc5ce4fdb0048cab7b3972e"
+  "gitHead": "671a8b93a913d6439625f83cb735ec780995eeae"
 }
